--- a/index.html
+++ b/index.html
@@ -220,27 +220,38 @@
    		</div>
    	</div>
    		<div style="text-align: center">
-   		<div style="padding-top: 30px; padding-bottom: 30px; height:500px">
+   		<div style="padding-top: 30px; padding-bottom: 30px; height:900px">
 			 <p style="font-size: 60px">Infographic 1</p>
+			 <img src="images/Infographic1.png"></img></div>
 		 </div>
 		 <div></div>
-		 <div style="background-color: #EAEAED;padding-top: 20px; padding-bottom: 20px">
+		 <div style="background-color: #EAEAED;padding-top: 50px; padding-bottom: 20px">
 		 <div style="width:80%; margin:0 10%; text-align: justify;">
    			<h1 style="text-align:center; color:black">Flight Route Map across USA</h1>
 
-   			<p class="lead" style="color:black">In 2015, all 12 US airlines carried out a totl of 5.8 million flights from 628 original airports to 629 destination airports all over USA. Among all cities, Chicago ranked No.1 and flew out over 430,000 flights, while San Francisco ranked No.8. For all airlines, Southwest was No.1 and had over 1.4 million flights with its hub in Chicago, Las Vegas and Baltimore. Enjoy your time and explore the chart below: <b>Flight Route Map across USA</b> to view flight traffic from a certain city, of an airline or view detailed flight information between any two points. </p>
-
+			<div class="lead" style="color:black">
+				<p>In 2015, all 12 US airlines carried out a total of 5.8 million flights between 628 airports. Chicago ranked No.1 among cities  and Southwest ranked No.1 among airlines. </p>
+				<p >Want to find out all flights from a certain city?<br>
+				Or want to find out hubs for a certain airlines?<br>
+				Have fun interacting with the below chart. Use the <b>filter</b> on the right side to <b>choose departure cities, airlines or both</b>!
+				</p>
+			</div>
    		</div>   		
-		 <div style="width:900px;height:600px; margin: 0 15%;">
+		 <div style="width:900px;height:600px; margin: 0 10%;">
 				<div class='tableauPlaceholder' id='viz1555891880240' style='position: relative; text-align: center'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;fl&#47;flightRoutesMap-InfoViz247&#47;FlightRouteMap&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='flightRoutesMap-InfoViz247&#47;FlightRouteMap' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;fl&#47;flightRoutesMap-InfoViz247&#47;FlightRouteMap&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                
 				<script type='text/javascript'>                    var divElement = document.getElementById('viz1555891880240');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='900px';vizElement.style.height='600px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 		 </div>
 		</div>
-		<div style="width:80%; margin:30px 10%; text-align: justify;">
-   			<h1 style="text-align:center; color:black">Average Flight Traffic every 10 minutes</h1>
-
-   			<p class="lead">Do you know that in 2015, there were 113 flights taking off every 10 minutes in average within USA? And the peak happened in the early morning at 6:00, yes with nearly <b>360 flights taking off  between 6:00 and 6:10 </b>. The next peak is at 7:00 with a little over 300 flights taking off in the next 10 minutes. Speaking of individual cities, Atlanta has a surprising 25.5 flights taking off between 13:40 and 13:50 and that is the most among all cities. Living in San Francisco for many years and not knowing that peak hours of the San Francisco Airport is around 10:40 ? Always curious to find out which one of SF or LA has more traffic? Our chart tells you that the winner is LA.  Want to explore more of traffic for different airlines, and even compare cities under each airline? Now go try with Airline or Tiered dimensions and have fun!</p>
-
+		<div style="width:80%; margin:30px 15%; text-align: justify;">
+   			<h1 style="text-align:center; color:black">Compare traffic every 10 minutes between Cities and Airlines</h1>
+			<div class="lead" style="color:black">
+				<p>Now let’s get to a finer granularity. In 2015, there were 113 flights taking off every 10 minutes and the peak happened between 06:00 and 06:10 with nearly 360 flights.  </p>
+				<p >The below chart allows you to explore and compare flight traffic between cities, airlines or both!<br>
+					First, choose one <b>dimension</b> button.<br>
+					Secondly, choose the two options you want to compare from <b>dropdown</b> menu.<br>					
+				</p>
+			</div>
+			
    		</div>   	
 
 		 <div style="height:20px"></div>
@@ -267,9 +278,7 @@
 			</div>
 			<div style="background-color:#EAEAED;padding-top: 30px; padding-bottom: 20px">
 
-			<div style="text-align: center">
-				<h1>Traffic over 24 hours</h1>
-			</div>
+			
 			<p class="lead" style="width:80%;margin:0 auto;color:black; text-align: justify">Had so much fun playing with the charts and doing multiple comparisons? Now sit back and relax to watch a paging animation of traffic of 24 hours in a day all over USA. You can see that traffic starts to pile up from 05:00 until 20:00 and California, Northeat, Chicago Texas are the busiest areas. If you want to know detailed information, simply hover above each city dot.</p>
 			<p></p>
 			<div style="width:800px;height:600px; margin: 0 auto;">
@@ -295,32 +304,33 @@
    			 <h4>Do you know that everyday in USA, there are 3605 flights delay?</h4>
    			 <img src="images/Infographic2.png"></img></div>
 		</div>
-		<div style="text-align: center; padding-top: 40px; padding-bottom: 40px;height:850px">
+		<div style="text-align: center; padding-top: 40px; padding-bottom: 40px;height:950px">
 			<div style="width:80%; margin:0 10%; text-align: justify;">
    			<h1 style="text-align:center; color:black">Point-to-Point Delay Around USA </h1>
 
-   			<p class="lead" style="color:black">Paragraph 1 </p>
+   			<p class="lead" style="color:black"> Select the origin cities and destination cities on the top right to filter the cities you are interested in. Hover on the map's routes, get to know the delay between different cities. </p>
 
    			</div>
-   			<div style="width:80%; height: 500px; margin:30px 10%; text-align: justify;">
+   			<div style="width:80%; height: 500px; margin:0px 10%; text-align: justify;">
 
 			<div class='tableauPlaceholder' id='viz1556063836361' style='position: relative'><noscript><a href=' '>< img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Cu&#47;CustomizedSearch2&#47;Sheet3&#47;1_rss.png' style='border: none' /></a ></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='CustomizedSearch2&#47;Sheet3' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Cu&#47;CustomizedSearch2&#47;Sheet3&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1556063836361');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.65)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 			</div>
 		</div>
     <div style="text-align: center;padding-top: 40px; padding-bottom: 40px;background-color:#EAEAED; ">
-      <div>
-        <h1>Flight delays over a year of each airline</h1>
+      <div style="width:80%; margin:0 auto">
+		<h1 style="text-align: center">Flight delays over a year of each airline</h1>
+		<p style="text-align:left"> Click on the start button to view delay information for each airline. The circle size represents their flight traffic for that day.Mouseover the date to move forward and backwards through time.
+		</p>
         <button onclick="start()" id="start_button">start</button>
       </div>
       <p id="chart-delay" style="display: inline-block"></p>
       <svg id='legend' style="height:200px"/>
-      <p style="text-align: center">Mouseover the date to move forward and backwards through time.</p>
 		</div>
 		<div style="text-align: center;padding-top: 40px; padding-bottom: 40px;  height:850px">
 			<div style="width:80%; margin:0 10%; text-align: justify;">
 	   			<h1 style="text-align:center; color:black">Chelsea's Tableau 2 </h1>
 
-	   			<p class="lead" style="color:black">Paragraph 2 </p>
+	   			<p class="lead" style="color:black">To get an overview of which airlines perform badly on being on time, select the airlines on the top right filters to compare airlines delay time within one week and within one year.  </p>
    			</div>  
 			<div style="width:80%; height: 500px; margin:30px 10%; text-align: justify;">
 			</div>
@@ -332,7 +342,7 @@
 	   			<p class="lead"> If you want to book a flight for your next business trip between two cities, and avoid the delay time, we have the information for you! Not only between different airlines but also weekdays. Choose the least busy weekday and airline for you!</p>
 	   			</div>
 				<div style="width:80%; height: 500px; margin:30px 10%; text-align: justify;">
-					<div class='tableauPlaceholder' id='viz1556064283147' style='position: relative'><noscript><a href=' '>< img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;We&#47;Week_15560632206940&#47;Sheet3&#47;1_rss.png' style='border: none' /></a ></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Week_15560632206940&#47;Sheet3' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;We&#47;Week_15560632206940&#47;Sheet3&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1556064283147');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.65)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+					<div class='tableauPlaceholder' id='viz1556064283147' style='position: relative'><noscript><a href=' '>< img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;We&#47;Week_15560632206940&#47;Sheet3&#47;1_rss.png' style='border: none' /></a ></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Week_15560632206940&#47;Sheet3' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;We&#47;Week_15560632206940&#47;Sheet3&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1556064283147');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.85)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 				</div>
 
    			</div>  
