--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
 			text-align: left;     
 			width: 140px;          
 			height: 58px;      
-			padding: 5px;       
+			padding: 3px;       
 			font: 12px sans-serif;    
-			background: lightsteelblue; 
+			color:#737373;
+			background: #f3f3f3; 
 			border: 0px;    
 			border-radius: 8px;     
 			pointer-events: none;     
