--- a/index.html
+++ b/index.html
@@ -230,7 +230,6 @@
    	</div>
    		<div style="text-align: center">
    		<div style="padding-top: 30px; padding-bottom: 30px; height:820px">
-			 <p style="font-size: 60px">Infographic 1</p>
 			 <img src="images/Infographic1.png"></img></div>
 		 </div>
 		 <div></div>
@@ -344,14 +343,14 @@
 			<div style="width:80%; height: 500px; margin:30px 10%; text-align: justify;">
 			</div>
 			</div>
-		<div style="text-align: center;padding-top: 40px; padding-bottom: 40px; background-color:#EAEAED;height:780px">
+		<div style="text-align: center;padding-top: 40px; padding-bottom: 40px; background-color:black;height:1040px">
 			<div style="width:80%; margin:0 10%; text-align: justify;">
-	   			<h1 style="text-align:center; color:black">Delay time comparison between airlines and weekday </h1>
+	   			<h1 style="text-align:center; color:white">Delay time comparison between airlines and weekday </h1>
 	   			<div style="height:80px">
-	   			<p class="lead"> If you want to book a flight for your next business trip between two cities, and avoid the delay time, we have the information for you! Not only between different airlines but also weekdays. Choose the least busy weekday and airline for you!</p>
+	   			<p class="lead" style="color:white"> If you want to book a flight for your next business trip between two cities, and avoid the delay time, we have the information for you! Not only between different airlines but also weekdays. Choose the least busy weekday and airline for you!</p>
 	   			</div>
-				<div style="width:80%; height: 500px; margin:30px 10%; text-align: justify;">
-					<div class='tableauPlaceholder' id='viz1556064283147' style='position: relative'><noscript><a href=' '>< img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;We&#47;Week_15560632206940&#47;Sheet3&#47;1_rss.png' style='border: none' /></a ></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Week_15560632206940&#47;Sheet3' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;We&#47;Week_15560632206940&#47;Sheet3&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1556064283147');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.85)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+				<div style="height: 880px; margin:30px 2%; text-align: justify;">
+					<div class='tableauPlaceholder' id='viz1556600450936' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;De&#47;Delaytime2&#47;Dashboard5&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Delaytime2&#47;Dashboard5' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;De&#47;Delaytime2&#47;Dashboard5&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1556600450936');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='800px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='500px';} else { vizElement.style.width='100%';vizElement.style.height='500px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 				</div>
 
    			</div>  
